# soundclone

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
lib/db/: Cargo.toml
lib/db/migrations/2024-05-23-071202_create_users/: up.sql
lib/db/migrations/2024-05-23-071333_create_albums/: up.sql
lib/db/migrations/2024-05-23-074218_create_tracks/: up.sql
lib/db/migrations/2024-05-23-074350_create_playlists/: down.sql  up.sql
lib/db/migrations/2024-05-23-074358_create_tracks_playlists/: down.sql  up.sql
lib/db/migrations/2024-05-23-074429_create_users_liked_tracks/: down.sql  up.sql
lib/db/src/: lib.rs  models.rs  schema.rs
lib/db/src/handlers/: mod.rs
lib/db/src/handlers/v1/: database.rs  users.rs
lib/db/src/models/: album_model.rs  mod.rs  playlist_model.rs  relationship_models.rs  track_model.rs  user_model.rs
lib/db/src/repositories/: album_repository.rs  albums.rs  database.rs  mod.rs  playlist_repository.rs  playlists.rs  track_repository.rs  tracks.rs  user_repository.rs  users.rs
lib/db/src/tests/: albums_test.rs  mod.rs  users_test.rs
lib/service/: Cargo.toml
lib/service/src/: lib.rs
lib/service/src/handlers/: user_handler.rs
ops/docker/: docker-compose.yml
