[workspace]
resolver = "2"

members = ["bin/*", "lib/*"]

[workspace.dependencies]
soundclone-db = { path = "lib/db" }
diesel = { version = "2.1.5", features = [
    "postgres",
    "serde_json",
    "chrono",
] } # no backend features need to be enabled
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
chrono = "0.4.38"
once_cell = "1.19.0"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
anyhow = "1.0.81"
thiserror = "1.0.58"
diesel_async_migrations = "0.12.0"
