[package]
name = "soundclone-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel.workspace = true
diesel-async.workspace = true
chrono.workspace = true
futures.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
once_cell.workspace = true
diesel_async_migrations.workspace = true
